right pane users alignment fixed

--- a/assets/scss/home_style.scss
+++ b/assets/scss/home_style.scss
@@ -145,7 +145,7 @@ body{
                         // border: solid 3px #5c5c5c;
                         border-radius: 3px;
                         // padding: 10px;
-                        // margin: 10px;
+                        margin: 3px 0px;
                         transition-duration: .2s;
                         .friends-display-content{
                             display: flex;
@@ -179,7 +179,7 @@ body{
                         // border: solid 3px #5c5c5c;
                         border-radius: 3px;
                         // padding: 10px;
-                        // margin: 10px;
+                        margin: 3px 0px;
                         transition-duration: .2s;
                         .friends-display-content{
                             display: flex;
